<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingTop="15sp"
        android:paddingEnd="10sp"
        android:paddingBottom="10sp">

        <LinearLayout
            android:id="@+id/ll_you"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@drawable/box_unfilled"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginEnd="8dp"
                    app:srcCompat="@drawable/playerhuman" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_player_1_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:text="@string/you"
                        android:textColor="@color/color_text"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_player_1_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/muli_semi_bold"
                        android:gravity="center"
                        android:text="@string/score_default"
                        android:textColor="@color/color_text"
                        android:textSize="22sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bot"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/box_unfilled"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_player_2_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/muli_bold"
                        android:gravity="center"
                        android:text="@string/Android"
                        android:textColor="@color/color_text"
                        android:textSize="20sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_player_2_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/muli_semi_bold"
                        android:gravity="center"
                        android:text="@string/score_default"
                        android:textColor="@color/color_text"
                        android:textSize="22sp" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="8dp"
                    app:srcCompat="@drawable/playerandroid" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>